--- a/src/main/resources/templates/My_Projects.html
+++ b/src/main/resources/templates/My_Projects.html
@@ -38,12 +38,13 @@
         <a th:href="@{#battleShipProjectSection}" class="learn-more">Ver proyectos</a>
     </div>
 </section>
-<section class="battleShipProject" id="battleShipProjectSection">
-    <h1>Mis proyectos</h1>
-    <div class="battleShip">
-        <div class="battleShip-col" id="battleShip-image">
+<section class="battleShip-section">
+    <h1>Mi trayectoria</h1>
+    <div class="battleShip-row">
+        <div class="battleShip-column">
+            <img src="/images/hundirflota.png">
         </div>
-        <div class="battleShip-col" id="battleShip-description">
+        <div class="battleShip-column">
             <a style="color: black" th:href="@{https://github.com/javierborreguero/Chat_Hundir_La_Flota_Sockets}">
                 <h3>Hundir la flota</h3>
             </a>
@@ -56,11 +57,12 @@
         </div>
     </div>
 </section>
-<section class="chatProject">
-    <div class="chat">
-        <div class="chat-col" id="chat-image">
+<section class="chat-section">
+    <div class="chat-row">
+        <div class="chat-column">
+            <img src="/images/chat.jpg">
         </div>
-        <div class="chat-col" id="chat-description">
+        <div class="chat-column">
             <a style="color: black" th:href="@{https://github.com/javierborreguero/Chat_Hundir_La_Flota_Sockets}">
                 <h3>Chat</h3>
             </a>
@@ -70,11 +72,12 @@
         </div>
     </div>
 </section>
-<section class="flightProject">
-    <div class="flightController">
-        <div class="flightController-col" id="flightController-image">
+<section class="flightController-section">
+    <div class="flightController-row">
+        <div class="flightController-column">
+            <img src="/images/plain.jpg">
         </div>
-        <div class="flightController-col" id="flightController-description">
+        <div class="flightController-column">
             <a style="color: black" th:href="@{https://github.com/javierborreguero/Gestor_Vuelos}">
                 <h3>Gestor de vuelos</h3>
             </a>
@@ -86,11 +89,12 @@
         </div>
     </div>
 </section>
-<section class="weatherProject">
-    <div class="weather">
-        <div class="weather-col" id="weather-image">
+<section class="weatherApp-section">
+    <div class="weatherApp-row">
+        <div class="weatherApp-column">
+            <img src="/images/aaa.jpg">
         </div>
-        <div class="weather-col" id="weather-description">
+        <div class="weatherApp-column">
             <a style="color: black" th:href="@{https://github.com/javierborreguero/Kotlin_WeatherApp}">
                 <h3>App Clima</h3>
             </a>
