Add id to project section

--- a/src/main/resources/templates/My_Projects.html
+++ b/src/main/resources/templates/My_Projects.html
@@ -38,8 +38,8 @@
         <a th:href="@{#battleShipProjectSection}" class="learn-more">Ver proyectos</a>
     </div>
 </section>
-<section class="battleShip-section">
-    <h1>Mi trayectoria</h1>
+<section class="battleShip-section" id="battleShipProjectSection">
+    <h1>Mis proyectos</h1>
     <div class="battleShip-row">
         <div class="battleShip-column">
             <img src="/images/hundirflota.png">
