--- a/src/main/resources/static/style/my_curriculum/MiCirruculumStyle.css
+++ b/src/main/resources/static/style/my_curriculum/MiCirruculumStyle.css
@@ -114,56 +114,31 @@ nav .fa {
 }
 
 /* Sección Sobre mí */
-.cv {
+.cv-section {
     width: 80%;
     margin: auto;
     text-align: center;
     padding-top: 100px;
 }
 
-.cv h1 {
-    font-size: 36px;
-    font-weight: 600;
-    width: 80%;
-}
-
-.cv p {
-    color: #777;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 22px;
-    padding: 10px;
-    width: 70%;
-}
-
 .cv-row {
-    position: absolute;
-    left: 30%;
-    width: 80%;
-    width: max-content;
-    margin-bottom: 10px;
+    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
 }
 
-.cv-col {
-    box-sizing: border-box;
-    float: left;
-    width: 80%;
-    padding: 10px;
-    height: auto;
-    margin-bottom: 10px;
+.cv-column {
+    flex-basis: 31%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
 }
 
-
-#cv-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../../images/curriculum.jpg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: right;
-    opacity: 1;
-    transition: .5s ease;
-    backface-visibility: hidden;
+.cv-column img {
     width: 700px;
     height: 1200px;
+    border-radius: 10px;
 }
 
 .middle {
@@ -177,7 +152,7 @@ nav .fa {
     text-align: center;
 }
 
-#cv-image:hover {
+#cv-section:hover {
     opacity: 0.3;
     cursor: pointer;
 
@@ -194,18 +169,12 @@ nav .fa {
     color: black;
 }
 
-.cv:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
 /* --- Footer ---*/
 .footer {
     width: 80%;
     margin: auto;
     text-align: center;
-    padding-top: 80%;
+    padding-top: 10%;
     padding-bottom: 10px;
 }
 
@@ -224,56 +193,7 @@ nav .fa {
 }
 
 /* ---Responsive--- */
-@media screen and (max-width: 1000px) {
-    .cv {
-        padding-top: 10%;
-        padding-bottom: 20%;
-    }
-    .footer {
-        padding-top: 300%;
-        padding-bottom: 10px;
-    }
-
-}
-@media screen and (max-width: 875px) {
-    .cv {
-        padding-top: 10%;
-        padding-bottom: 20%;
-    }
-
-
-    .footer {
-        padding-top: 300%;
-        padding-bottom: 10px;
-    }
-
-}
-@media screen and (max-width: 647px) {
-    .cv {
-        padding-top: 10%;
-        padding-bottom: 20%;
-    }
-
-
-    .footer {
-        padding-top: 300%;
-        padding-bottom: 10px;
-    }
-
-}
-@media screen and (max-width: 541px) {
-    .cv {
-        padding-top: 10%;
-        padding-bottom: 20%;
-    }
-
-    .footer {
-        padding-top: 300%;
-        padding-bottom: 10px;
-    }
-
-}
-@media screen and (max-width: 502px) {
+@media screen and (max-width: 700px) {
     .reporting h1 {
         font-size: 20px;
     }
@@ -329,76 +249,5 @@ nav .fa {
         padding: 30px;
     }
 }
-@media screen and (max-width: 461px) {
-    .cv {
-        padding-top: 10%;
-        padding-bottom: 20%;
-    }
-    .footer {
-        padding-top: 300%;
-        padding-bottom: 10px;
-    }
 
-}
-@media screen and (max-width: 435px) {
-    .cv {
-        padding-top: 10%;
-        padding-bottom: 20%;
-    }
-
-    .footer {
-        padding-top: 300%;
-        padding-bottom: 10px;
-    }
-
-}
-@media screen and (max-width: 412px) {
-    .cv {
-        padding-top: 10%;
-        padding-bottom: 20%;
-
-    }
-
-    .footer {
-        padding-top: 300%;
-        padding-bottom: 10px;
-    }
-
-}
-@media screen and (max-width: 405px) {
-    .cv {
-        padding-top: 10%;
-        padding-bottom: 20%;
-    }
-
-    .footer {
-        padding-top: 300%;
-        padding-bottom: 10px;
-    }
-
-}
-@media screen and (max-width: 373px) {
-    .cv {
-        padding-top: 10%;
-        padding-bottom: 20%;
-    }
-
-    .footer {
-        padding-top: 300%;
-        padding-bottom: 10px;
-    }
-
-}
-@media screen and (max-width: 281px) {
-    .cv {
-        padding-top: 10%;
-        padding-bottom: 20%;
-    }
-
-    .footer {
-        padding-top: 300%;
-        padding-bottom: 10px;
-    }
-
-}
 /*-----------------*/
