--- a/src/main/resources/static/style/my_curriculum/MiCirruculumStyle.css
+++ b/src/main/resources/static/style/my_curriculum/MiCirruculumStyle.css
@@ -123,21 +123,23 @@ nav .fa {
 
 .cv-row {
     margin-top: 5%;
-    display: flex;
     justify-content: center;
-    flex-direction: row;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .cv-column {
     flex-basis: 31%;
     border-radius: 10px;
     margin-bottom: 5%;
-    text-align: left;
+    text-align: initial;
 }
 
 .cv-column img {
-    width: 700px;
-    height: 1200px;
+
+    width: 100%;
+    height: auto;
     border-radius: 10px;
 }
 
@@ -145,14 +147,14 @@ nav .fa {
     transition: .5s ease;
     opacity: 0;
     position: absolute;
-    top: 50%;
+    top: 200%;
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     text-align: center;
 }
 
-#cv-section:hover {
+#cv-image:hover {
     opacity: 0.3;
     cursor: pointer;
 
