--- a/src/main/resources/templates/Main_Screen.html
+++ b/src/main/resources/templates/Main_Screen.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <!-- Sección para la imagen, la barra de navegación y la presentación -->
-<section class="header">
+<section class="header" id="aux">
     <nav>
         <a class> <img src="/images/webIcon.ico"></a>
         <div class="nav-links" id="navLinks">
