--- a/src/main/resources/static/style/projects/MyProjectsStyle.css
+++ b/src/main/resources/static/style/projects/MyProjectsStyle.css
@@ -8,13 +8,12 @@
 /* ----------------------------------- */
 /* ---Configuración de la imagen--- */
 .header {
-    height: 1000px;
+    position: relative;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../../images/primeraportadaproyecto.jpg");
-    background-position: initial;
+    background: url("../../images/primeraportadaproyecto.jpg") no-repeat center center;
     background-size: cover;
-    background-repeat: no-repeat;
-    position: center;
+    height: 667px;
+
 }
 
 /* ----------------------------------- */
@@ -281,7 +280,7 @@ p {
 
     /* --- Se despliega el menú lateral con las opciones del menú */
     .nav-links {
-        position: absolute;
+        position: fixed;
         color: black;
         background: white;
         height: 115vh;
